fix height of .ep-help-body so overflow works on firefox #4031

--- a/arches/app/media/css/arches.css
+++ b/arches/app/media/css/arches.css
@@ -5673,7 +5673,7 @@ ul.jqtree_common li.jqtree-folder {
 }
 
 .ep-help-body {
-    height: 100%;
+    height: calc(100vh - 50px);
     width: 100%;
     overflow-y: auto;
     display: table-row;
